# Flutter_Demo_Plate_Recognization

demo_app/: pubspec.yaml
demo_app/android/app/: build.gradle  google-services.json
demo_app/ios/: firebase_app_id_file.json
demo_app/ios/Runner/: GoogleService-Info.plist
demo_app/lib/: firebase_options.dart  home_page.dart  main.dart
flutter_interop_c/: README.md  pubspec.yaml
flutter_interop_c/android/: CMakeLists.txt  build.gradle  settings.gradle
flutter_interop_c/android/src/main/: AndroidManifest.xml
flutter_interop_c/android/src/main/kotlin/com/iamthene/da1/flutter_interop_c/: FlutterInterop_cPlugin.kt
flutter_interop_c/android/src/test/kotlin/com/iamthene/da1/flutter_interop_c/: FlutterInterop_cPluginTest.kt
flutter_interop_c/example/: README.md  pubspec.yaml
flutter_interop_c/example/android/app/: build.gradle
flutter_interop_c/example/integration_test/: plugin_integration_test.dart
flutter_interop_c/example/ios/Runner/: Info.plist
flutter_interop_c/example/ios/Runner.xcodeproj/: project.pbxproj
flutter_interop_c/example/ios/RunnerTests/: RunnerTests.swift
flutter_interop_c/example/lib/: main.dart
flutter_interop_c/example/test/: widget_test.dart
flutter_interop_c/ios/: flutter_interop_c.podspec
flutter_interop_c/ios/Classes/: FlutterInterop_cPlugin.swift  native_opencv.cpp
flutter_interop_c/lib/: flutter_interop_c.dart  flutter_interop_c_method_channel.dart  flutter_interop_c_platform_interface.dart  flutter_interop_c_type.dart
flutter_interop_c/test/: flutter_interop_c_method_channel_test.dart  flutter_interop_c_test.dart
(+5 files in other folders)
